# holojam-7-shiori-game

extension/: Cargo.toml
extension/src/: lib.rs
extension/src/platformer/: camera.rs  lazer.rs  mod.rs
extension/src/platformer/actor/: cube.rs  detector.rs  door.rs  mod.rs  plate.rs  player.rs  unlock_book_zone.rs
godot-project/: .gitignore  Beam_Body.png.import  Beam_Body.res  dev_laser.png.import  dev_receiver.png.import  extension.gdextension  extension.gdextension.uid  icon.svg.import  platform_book.png.import  platform_book.res  project.godot  test.tscn
godot-project/menus/: menu.gd  menu.gd.uid  menu.tscn  pause_menu.gd  pause_menu.gd.uid  pause_menu.tscn
godot-project/music/: main.mp3.import
godot-project/scenes/: beam.tscn  shiori.tscn
godot-project/sprite_aseprite/: Beam_Body.aseprite  Beam_Body.aseprite.import  Box_Justice.aseprite  Box_Justice.aseprite.import  Box_Justice.png.import  Box_Justice2.png.import  Box_Switch.aseprite  Box_Switch.aseprite.import  advent_prison.aseprite  advent_prison.aseprite.import  platform_book.aseprite  platform_book.aseprite.import  shiorinovella.aseprite  shiorinovella.aseprite.import  shiorinovella.png.import  shiorinovella2.aseprite  shiorinovella2.aseprite.import  shiorinovella2.png.import  shiorinovella2_backup.aseprite  shiorinovella2_backup.aseprite.import  shiorinovella2w.png.import
godot-project/sprite_aseprite_output/: Box_Switch.res  (+61 more)
sprite_aseprite/: Box_Justice.aseprite  box_justice_32.aseprite  box_justice_48.aseprite  box_justice_64.aseprite  neswithtranspalette.aseprite  shiorinovella2.aseprite
(+83 files in other folders)
