[package]
name = "hj7"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.10.0"
godot = "0.2.4"

#[dependencies.godot]
#git = "https://github.com/godot-rust/gdext"
#branch = "master"
#features = ["api-custom", "experimental-wasm", "lazy-function-tables", "experimental-wasm-nothreads"]

[profile.release]
opt-level = "z"
panic = "abort"
